<resources>
    <string name="app_name">Harry Potter</string>
    <string name="splash_app_name">Harry\nPotter</string>
    <string name="date_of_birthday">Date of birthday: %s</string>
    <string name="species">Species: %s</string>
    <string name="status">Status: %s</string>
    <string name="ancestry">Ancestry: %s</string>
    <string name="house">House: %s</string>
    <string name="character_name">%s</string>
    <string name="favorites">Favorites</string>
    <string name="back">Back</string>
    <string name="avatar">Avatar</string>
    <string name="gender">Gender</string>
    <string name="alive">alive</string>
    <string name="dead">dead</string>
    <string name="connection_error">Can\'t connect to the server</string>
    <string name="network_error">Error network connection</string>
    <string name="load_error">Can\'t load data from server</string>
    <string name="data_error">Can\'t load data</string>
    <string name="parse_error">Can\'t parse response</string>
    <string name="unknown_error">Unknown error</string>
    <string name="haven_favorite_characters">You haven\'t had any favorite characters</string>
</resources>