<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".presentation.fragments.DetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_app_name_detail"
            style="@style/TextViewInToolBar"
            android:text="@string/character_name"
            tools:text="Harry Potter"/>

        <ImageView
            android:id="@+id/iv_back_detail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_backspace_24" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_image_detail"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/iv_image_detail"
        app:layout_constraintTop_toBottomOf="@id/iv_image_detail"
        tools:text="Harry Potter" />

    <ImageView
        android:id="@+id/iv_gender_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_detail"
        app:layout_constraintStart_toEndOf="@id/tv_name_detail"
        app:layout_constraintTop_toTopOf="@id/tv_name_detail"
        tools:src="@drawable/ic_male_24"
        android:contentDescription="@string/gender" />

    <TextView
        android:id="@+id/tv_birthday_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_of_birthday"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_name_detail"
        tools:text="Date of birthday: 31.07.1980" />

    <TextView
        android:id="@+id/tv_house_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/house"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_birthday_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_birthday_detail"
        tools:text="House: Gryffindor" />

    <TextView
        android:id="@+id/tv_species_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/species"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_house_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_house_detail"
        tools:text="Species: human" />

    <TextView
        android:id="@+id/tv_status_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_species_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_species_detail"
        tools:text="Status: alive" />

    <TextView
        android:id="@+id/tv_ancestry_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ancestry"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_status_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_status_detail"
        tools:text="Ancestry: pure-blood" />

    <ImageView
        android:id="@+id/iv_favorite_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="@id/iv_gender_detail"
        app:layout_constraintEnd_toEndOf="@id/iv_image_detail"
        app:layout_constraintTop_toTopOf="@id/iv_gender_detail"
        android:contentDescription="@string/favorites" />


</androidx.constraintlayout.widget.ConstraintLayout>